// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente <GifGrid/> Debe mostrar el control correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__faden"
  >
    goku
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en el componente <GifGrid/> Debe mostrar items cuando se cargan imagenes en useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__faden"
  >
    goku
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="123456"
      key="123456"
      title="Dragon Ball GIF by TOEI Animation UK"
      url="https://media1.giphy.com/media/GRSnxyhJnPsaQy9YLn/giphy.gif?cid=70a38d38casbobveplnboyjb4ahtzdhdxe3dfv9dztcr6q6d&rid=giphy.gif&ct=g"
    />
    <GifGridItem
      id="123456"
      key="123456"
      title="Dragon Ball GIF by TOEI Animation UK"
      url="https://media1.giphy.com/media/GRSnxyhJnPsaQy9YLn/giphy.gif?cid=70a38d38casbobveplnboyjb4ahtzdhdxe3dfv9dztcr6q6d&rid=giphy.gif&ct=g"
    />
  </div>
</Fragment>
`;
